full_error.log
[36mvite v8.0.1 [32mbuilding client environment for production...[36m[39m
[2Ktransforming...(node:2824) Warning: Failed to load the ES module: C:\Users\sanus\Downloads\Web\postcss.config.js. Make sure to set "type": "module" in the nearest package.json file or use the .mjs extension.
(Use `node --trace-warnings ...` to show where the warning was created)
✓ 2134 modules transformed.
[31m✗[39m Build failed in 229ms
[31merror during build:
[31mBuild failed with 1 error:

[plugin vite:css] C:/Users/sanus/Downloads/Web/src/index.css
Failed to load PostCSS config: Failed to load PostCSS config (searchPath: C:/Users/sanus/Downloads/Web): [SyntaxError] Unexpected token 'export'
C:\Users\sanus\Downloads\Web\postcss.config.js:1
export default {
^^^^^^

SyntaxError: Unexpected token 'export'
    at wrapSafe (node:internal/modules/cjs/loader:1692:18)
    at Module._compile (node:internal/modules/cjs/loader:1735:20)
    at Object..js (node:internal/modules/cjs/loader:1893:10)
    at Module.load (node:internal/modules/cjs/loader:1481:32)
    at Module._load (node:internal/modules/cjs/loader:1300:12)
    at TracingChannel.traceSync (node:diagnostics_channel:328:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:245:24)
    at loadCJSModuleWithModuleLoad (node:internal/modules/esm/translators:339:3)
    at ModuleWrap.<anonymous> (node:internal/modules/esm/translators:242:7)
    at ModuleJob.run (node:internal/modules/esm/module_job:413:25)[31m
    at aggregateBindingErrorsIntoJsError (file:///C:/Users/sanus/Downloads/Web/node_modules/rolldown/dist/shared/error-BO4SlZV_.mjs:48:18)
    at unwrapBindingResult (file:///C:/Users/sanus/Downloads/Web/node_modules/rolldown/dist/shared/error-BO4SlZV_.mjs:18:128)
    at #build (file:///C:/Users/sanus/Downloads/Web/node_modules/rolldown/dist/shared/rolldown-build-yQC7KN8K.mjs:3311:34)
    at async buildEnvironment (file:///C:/Users/sanus/Downloads/Web/node_modules/vite/dist/node/chunks/node.js:32817:64)
    at async Object.build (file:///C:/Users/sanus/Downloads/Web/node_modules/vite/dist/node/chunks/node.js:33239:19)
    at async Object.buildApp (file:///C:/Users/sanus/Downloads/Web/node_modules/vite/dist/node/chunks/node.js:33236:153)
    at async CAC.<anonymous> (file:///C:/Users/sanus/Downloads/Web/node_modules/vite/dist/node/cli.js:778:3) {
  errors: [Getter/Setter]
}[39m
